fluxcd/catalog/system/cert-manager/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager-allow-any
  namespace: system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: cert-manager
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager-webhook-allow-from-any
  namespace: system
spec:
  podSelector:
    matchLabels:
      app: webhook
      app.kubernetes.io/component: webhook
      app.kubernetes.io/instance: cert-manager
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress: []

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager-csi-driver-allow-any
  namespace: system
spec:
  podSelector:
    matchLabels:
      app: cert-manager-csi-driver
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
